// Copyright © 2023 OpenIM. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package OpenIMServer.auth;
option go_package = "github.com/OpenIMSDK/Open-IM-Server/pkg/proto/auth";


message userTokenReq {
  string secret = 1;
  int32  platformID = 2;
  string userID = 3;
}
message userTokenResp {
  string token = 2;
  int64  expireTimeSeconds = 3;
}

message forceLogoutReq {
  int32  platformID = 1;
  string userID = 2;
}
message forceLogoutResp {
}

message parseTokenReq{
  string token = 1;
}
message parseTokenResp{
  string userID = 1;
  string platform = 2;
  int64 expireTimeSeconds = 4;
}

service Auth {
  //生成token
  rpc userToken(userTokenReq) returns(userTokenResp);
  //强制退出登录
  rpc forceLogout(forceLogoutReq) returns(forceLogoutResp);
  //解析token
  rpc parseToken(parseTokenReq)returns(parseTokenResp);
}


